org.asup.dk.parser.ibmi/src/org/asup/dk/parser/ibmi/cl/antlr/CLParser.java
// $ANTLR 3.5.1 CL.g 2014-09-22 12:05:18

  package org.asup.dk.parser.ibmi.cl.antlr;

  import org.asup.dk.parser.ibmi.cl.util.CLParserHelper;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class CLParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "APOS", "CHAR_SPECIAL", "CL", 
		"CLOSE_BRACE", "CMD_NAME", "COMMAND", "COMMENT", "CR", "FUN", "LABEL", 
		"OPEN_BRACE", "PAR", "PAREN", "PAR_NAME", "PAR_VALUE", "POS_PAR", "ROW", 
		"STRING", "TOKEN", "WS"
	};
	public static final int EOF=-1;
	public static final int APOS=4;
	public static final int CHAR_SPECIAL=5;
	public static final int CL=6;
	public static final int CLOSE_BRACE=7;
	public static final int CMD_NAME=8;
	public static final int COMMAND=9;
	public static final int COMMENT=10;
	public static final int CR=11;
	public static final int FUN=12;
	public static final int LABEL=13;
	public static final int OPEN_BRACE=14;
	public static final int PAR=15;
	public static final int PAREN=16;
	public static final int PAR_NAME=17;
	public static final int PAR_VALUE=18;
	public static final int POS_PAR=19;
	public static final int ROW=20;
	public static final int STRING=21;
	public static final int TOKEN=22;
	public static final int WS=23;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public CLParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public CLParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return CLParser.tokenNames; }
	@Override public String getGrammarFileName() { return "CL.g"; }



	   public CLParserHelper hlp = new CLParserHelper(this);

	   @Override
	  	protected Object recoverFromMismatchedToken(IntStream input, int ttype, BitSet follow) throws RecognitionException {
	    	throw new MismatchedTokenException(ttype, input);
	  	}

	   @Override
	   public void reportError(RecognitionException e) {
	      super.reportError(e);
	      RuntimeException re = hlp.createException(e);
	      recover(input, e);
	      throw re;
	   }

	   @Override
	  	public Object recoverFromMismatchedSet(IntStream input, RecognitionException e, BitSet follow) throws RecognitionException {
	    	throw e;
	    }




	public static class parse_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "parse"
	// CL.g:93:1: parse : ( row | ( ( WS )* CR ) )* EOF -> ^( CL[$parse.text] ( row )* ) ;
	public final CLParser.parse_return parse() throws RecognitionException {
		CLParser.parse_return retval = new CLParser.parse_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token WS2=null;
		Token CR3=null;
		Token EOF4=null;
		ParserRuleReturnScope row1 =null;

		CommonTree WS2_tree=null;
		CommonTree CR3_tree=null;
		CommonTree EOF4_tree=null;
		RewriteRuleTokenStream stream_WS=new RewriteRuleTokenStream(adaptor,"token WS");
		RewriteRuleTokenStream stream_CR=new RewriteRuleTokenStream(adaptor,"token CR");
		RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_row=new RewriteRuleSubtreeStream(adaptor,"rule row");

		try {
			// CL.g:93:8: ( ( row | ( ( WS )* CR ) )* EOF -> ^( CL[$parse.text] ( row )* ) )
			// CL.g:94:3: ( row | ( ( WS )* CR ) )* EOF
			{
			// CL.g:94:3: ( row | ( ( WS )* CR ) )*
			loop2:
			while (true) {
				int alt2=3;
				alt2 = dfa2.predict(input);
				switch (alt2) {
				case 1 :
					// CL.g:94:4: row
					{
					pushFollow(FOLLOW_row_in_parse129);
					row1=row();
					state._fsp--;

					stream_row.add(row1.getTree());
					}
					break;
				case 2 :
					// CL.g:94:10: ( ( WS )* CR )
					{
					// CL.g:94:10: ( ( WS )* CR )
					// CL.g:94:11: ( WS )* CR
					{
					// CL.g:94:11: ( WS )*
					loop1:
					while (true) {
						int alt1=2;
						int LA1_0 = input.LA(1);
						if ( (LA1_0==WS) ) {
							alt1=1;
						}

						switch (alt1) {
						case 1 :
							// CL.g:94:12: WS
							{
							WS2=(Token)match(input,WS,FOLLOW_WS_in_parse135);  
							stream_WS.add(WS2);

							}
							break;

						default :
							break loop1;
						}
					}

					CR3=(Token)match(input,CR,FOLLOW_CR_in_parse139);  
					stream_CR.add(CR3);

					}

					}
					break;

				default :
					break loop2;
				}
			}

			EOF4=(Token)match(input,EOF,FOLLOW_EOF_in_parse144);  
			stream_EOF.add(EOF4);

			// AST REWRITE
			// elements: row
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 94:27: -> ^( CL[$parse.text] ( row )* )
			{
				// CL.g:94:29: ^( CL[$parse.text] ( row )* )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(CL, input.toString(retval.start,input.LT(-1))), root_1);
				// CL.g:94:47: ( row )*
				while ( stream_row.hasNext() ) {
					adaptor.addChild(root_1, stream_row.nextTree());
				}
				stream_row.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}

		    catch (RecognitionException e) {
		        RuntimeException re = hlp.createException(e);
		        throw re;
		    }

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "parse"


	public static class row_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "row"
	// CL.g:97:1: row : ( single_label | command_row );
	public final CLParser.row_return row() throws RecognitionException {
		CLParser.row_return retval = new CLParser.row_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope single_label5 =null;
		ParserRuleReturnScope command_row6 =null;


		try {
			// CL.g:97:5: ( single_label | command_row )
			int alt3=2;
			alt3 = dfa3.predict(input);
			switch (alt3) {
				case 1 :
					// CL.g:98:5: single_label
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_single_label_in_row168);
					single_label5=single_label();
					state._fsp--;

					adaptor.addChild(root_0, single_label5.getTree());

					}
					break;
				case 2 :
					// CL.g:99:7: command_row
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_command_row_in_row176);
					command_row6=command_row();
					state._fsp--;

					adaptor.addChild(root_0, command_row6.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}

		    catch (RecognitionException e) {
		        RuntimeException re = hlp.createException(e);
		        throw re;
		    }

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "row"


	public static class single_label_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "single_label"
	// CL.g:102:1: single_label : label ( WS )* CR -> ^( ROW[$single_label.text] label ) ;
	public final CLParser.single_label_return single_label() throws RecognitionException {
		CLParser.single_label_return retval = new CLParser.single_label_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token WS8=null;
		Token CR9=null;
		ParserRuleReturnScope label7 =null;

		CommonTree WS8_tree=null;
		CommonTree CR9_tree=null;
		RewriteRuleTokenStream stream_WS=new RewriteRuleTokenStream(adaptor,"token WS");
		RewriteRuleTokenStream stream_CR=new RewriteRuleTokenStream(adaptor,"token CR");
		RewriteRuleSubtreeStream stream_label=new RewriteRuleSubtreeStream(adaptor,"rule label");

		try {
			// CL.g:102:15: ( label ( WS )* CR -> ^( ROW[$single_label.text] label ) )
			// CL.g:103:5: label ( WS )* CR
			{
			pushFollow(FOLLOW_label_in_single_label194);
			label7=label();
			state._fsp--;

			stream_label.add(label7.getTree());
			// CL.g:103:11: ( WS )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==WS) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// CL.g:103:12: WS
					{
					WS8=(Token)match(input,WS,FOLLOW_WS_in_single_label197);  
					stream_WS.add(WS8);

					}
					break;

				default :
					break loop4;
				}
			}

			CR9=(Token)match(input,CR,FOLLOW_CR_in_single_label201);  
			stream_CR.add(CR9);

			// AST REWRITE
			// elements: label
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 103:20: -> ^( ROW[$single_label.text] label )
			{
				// CL.g:103:22: ^( ROW[$single_label.text] label )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(ROW, input.toString(retval.start,input.LT(-1))), root_1);
				adaptor.addChild(root_1, stream_label.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}

		    catch (RecognitionException e) {
		        RuntimeException re = hlp.createException(e);
		        throw re;
		    }

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "single_label"


	public static class command_row_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "command_row"
	// CL.g:106:1: command_row : ( label )? ( WS )* command CR -> ^( ROW[$command_row.text] ( label )? command ) ;
	public final CLParser.command_row_return command_row() throws RecognitionException {
		CLParser.command_row_return retval = new CLParser.command_row_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token WS11=null;
		Token CR13=null;
		ParserRuleReturnScope label10 =null;
		ParserRuleReturnScope command12 =null;

		CommonTree WS11_tree=null;
		CommonTree CR13_tree=null;
		RewriteRuleTokenStream stream_WS=new RewriteRuleTokenStream(adaptor,"token WS");
		RewriteRuleTokenStream stream_CR=new RewriteRuleTokenStream(adaptor,"token CR");
		RewriteRuleSubtreeStream stream_command=new RewriteRuleSubtreeStream(adaptor,"rule command");
		RewriteRuleSubtreeStream stream_label=new RewriteRuleSubtreeStream(adaptor,"rule label");

		try {
			// CL.g:106:12: ( ( label )? ( WS )* command CR -> ^( ROW[$command_row.text] ( label )? command ) )
			// CL.g:107:2: ( label )? ( WS )* command CR
			{
			// CL.g:107:2: ( label )?
			int alt5=2;
			alt5 = dfa5.predict(input);
			switch (alt5) {
				case 1 :
					// CL.g:107:3: label
					{
					pushFollow(FOLLOW_label_in_command_row223);
					label10=label();
					state._fsp--;

					stream_label.add(label10.getTree());
					}
					break;

			}

			// CL.g:107:11: ( WS )*
			loop6:
			while (true) {
				int alt6=2;
				int LA6_0 = input.LA(1);
				if ( (LA6_0==WS) ) {
					alt6=1;
				}

				switch (alt6) {
				case 1 :
					// CL.g:107:12: WS
					{
					WS11=(Token)match(input,WS,FOLLOW_WS_in_command_row228);  
					stream_WS.add(WS11);

					}
					break;

				default :
					break loop6;
				}
			}

			pushFollow(FOLLOW_command_in_command_row232);
			command12=command();
			state._fsp--;

			stream_command.add(command12.getTree());
			CR13=(Token)match(input,CR,FOLLOW_CR_in_command_row234);  
			stream_CR.add(CR13);

			// AST REWRITE
			// elements: label, command
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 107:28: -> ^( ROW[$command_row.text] ( label )? command )
			{
				// CL.g:107:30: ^( ROW[$command_row.text] ( label )? command )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(ROW, input.toString(retval.start,input.LT(-1))), root_1);
				// CL.g:107:55: ( label )?
				if ( stream_label.hasNext() ) {
					adaptor.addChild(root_1, stream_label.nextTree());
				}
				stream_label.reset();

				adaptor.addChild(root_1, stream_command.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}

		    catch (RecognitionException e) {
		        RuntimeException re = hlp.createException(e);
		        throw re;
		    }

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "command_row"


	public static class label_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "label"
	// CL.g:110:1: label : ( WS )* LABEL ;
	public final CLParser.label_return label() throws RecognitionException {
		CLParser.label_return retval = new CLParser.label_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token WS14=null;
		Token LABEL15=null;

		CommonTree WS14_tree=null;
		CommonTree LABEL15_tree=null;

		try {
			// CL.g:110:7: ( ( WS )* LABEL )
			// CL.g:110:9: ( WS )* LABEL
			{
			root_0 = (CommonTree)adaptor.nil();


			// CL.g:110:9: ( WS )*
			loop7:
			while (true) {
				int alt7=2;
				int LA7_0 = input.LA(1);
				if ( (LA7_0==WS) ) {
					alt7=1;
				}

				switch (alt7) {
				case 1 :
					// CL.g:110:10: WS
					{
					WS14=(Token)match(input,WS,FOLLOW_WS_in_label259); 
					WS14_tree = (CommonTree)adaptor.create(WS14);
					adaptor.addChild(root_0, WS14_tree);

					}
					break;

				default :
					break loop7;
				}
			}

			LABEL15=(Token)match(input,LABEL,FOLLOW_LABEL_in_label263); 
			LABEL15_tree = (CommonTree)adaptor.create(LABEL15);
			adaptor.addChild(root_0, LABEL15_tree);

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}

		    catch (RecognitionException e) {
		        RuntimeException re = hlp.createException(e);
		        throw re;
		    }

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "label"


	public static class command_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "command"
	// CL.g:113:1: command : cmd_name ( ( WS )+ pos_parm )* ( ( WS )+ parm )* ( WS )* -> ^( COMMAND[$command.text] cmd_name ( pos_parm )* ( parm )* ) ;
	public final CLParser.command_return command() throws RecognitionException {
		CLParser.command_return retval = new CLParser.command_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token WS17=null;
		Token WS19=null;
		Token WS21=null;
		ParserRuleReturnScope cmd_name16 =null;
		ParserRuleReturnScope pos_parm18 =null;
		ParserRuleReturnScope parm20 =null;

		CommonTree WS17_tree=null;
		CommonTree WS19_tree=null;
		CommonTree WS21_tree=null;
		RewriteRuleTokenStream stream_WS=new RewriteRuleTokenStream(adaptor,"token WS");
		RewriteRuleSubtreeStream stream_parm=new RewriteRuleSubtreeStream(adaptor,"rule parm");
		RewriteRuleSubtreeStream stream_pos_parm=new RewriteRuleSubtreeStream(adaptor,"rule pos_parm");
		RewriteRuleSubtreeStream stream_cmd_name=new RewriteRuleSubtreeStream(adaptor,"rule cmd_name");

		try {
			// CL.g:114:3: ( cmd_name ( ( WS )+ pos_parm )* ( ( WS )+ parm )* ( WS )* -> ^( COMMAND[$command.text] cmd_name ( pos_parm )* ( parm )* ) )
			// CL.g:115:3: cmd_name ( ( WS )+ pos_parm )* ( ( WS )+ parm )* ( WS )*
			{
			pushFollow(FOLLOW_cmd_name_in_command278);
			cmd_name16=cmd_name();
			state._fsp--;

			stream_cmd_name.add(cmd_name16.getTree());
			// CL.g:115:12: ( ( WS )+ pos_parm )*
			loop9:
			while (true) {
				int alt9=2;
				alt9 = dfa9.predict(input);
				switch (alt9) {
				case 1 :
					// CL.g:115:13: ( WS )+ pos_parm
					{
					// CL.g:115:13: ( WS )+
					int cnt8=0;
					loop8:
					while (true) {
						int alt8=2;
						int LA8_0 = input.LA(1);
						if ( (LA8_0==WS) ) {
							alt8=1;
						}

						switch (alt8) {
						case 1 :
							// CL.g:115:14: WS
							{
							WS17=(Token)match(input,WS,FOLLOW_WS_in_command282);  
							stream_WS.add(WS17);

							}
							break;

						default :
							if ( cnt8 >= 1 ) break loop8;
							EarlyExitException eee = new EarlyExitException(8, input);
							throw eee;
						}
						cnt8++;
					}

					pushFollow(FOLLOW_pos_parm_in_command286);
					pos_parm18=pos_parm();
					state._fsp--;

					stream_pos_parm.add(pos_parm18.getTree());
					}
					break;

				default :
					break loop9;
				}
			}

			// CL.g:115:30: ( ( WS )+ parm )*
			loop11:
			while (true) {
				int alt11=2;
				alt11 = dfa11.predict(input);
				switch (alt11) {
				case 1 :
					// CL.g:115:31: ( WS )+ parm
					{
					// CL.g:115:31: ( WS )+
					int cnt10=0;
					loop10:
					while (true) {
						int alt10=2;
						int LA10_0 = input.LA(1);
						if ( (LA10_0==WS) ) {
							alt10=1;
						}

						switch (alt10) {
						case 1 :
							// CL.g:115:32: WS
							{
							WS19=(Token)match(input,WS,FOLLOW_WS_in_command292);  
							stream_WS.add(WS19);

							}
							break;

						default :
							if ( cnt10 >= 1 ) break loop10;
							EarlyExitException eee = new EarlyExitException(10, input);
							throw eee;
						}
						cnt10++;
					}

					pushFollow(FOLLOW_parm_in_command296);
					parm20=parm();
					state._fsp--;

					stream_parm.add(parm20.getTree());
					}
					break;

				default :
					break loop11;
				}
			}

			// CL.g:115:44: ( WS )*
			loop12:
			while (true) {
				int alt12=2;
				int LA12_0 = input.LA(1);
				if ( (LA12_0==WS) ) {
					alt12=1;
				}

				switch (alt12) {
				case 1 :
					// CL.g:115:45: WS
					{
					WS21=(Token)match(input,WS,FOLLOW_WS_in_command301);  
					stream_WS.add(WS21);

					}
					break;

				default :
					break loop12;
				}
			}

			// AST REWRITE
			// elements: cmd_name, pos_parm, parm
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 115:50: -> ^( COMMAND[$command.text] cmd_name ( pos_parm )* ( parm )* )
			{
				// CL.g:115:53: ^( COMMAND[$command.text] cmd_name ( pos_parm )* ( parm )* )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(COMMAND, input.toString(retval.start,input.LT(-1))), root_1);
				adaptor.addChild(root_1, stream_cmd_name.nextTree());
				// CL.g:115:87: ( pos_parm )*
				while ( stream_pos_parm.hasNext() ) {
					adaptor.addChild(root_1, stream_pos_parm.nextTree());
				}
				stream_pos_parm.reset();

				// CL.g:115:99: ( parm )*
				while ( stream_parm.hasNext() ) {
					adaptor.addChild(root_1, stream_parm.nextTree());
				}
				stream_parm.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}

		    catch (RecognitionException e) {
		        RuntimeException re = hlp.createException(e);
		        throw re;
		    }

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "command"


	public static class cmd_name_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "cmd_name"
	// CL.g:118:1: cmd_name : TOKEN -> ^( CMD_NAME[$TOKEN.text] ) ;
	public final CLParser.cmd_name_return cmd_name() throws RecognitionException {
		CLParser.cmd_name_return retval = new CLParser.cmd_name_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token TOKEN22=null;

		CommonTree TOKEN22_tree=null;
		RewriteRuleTokenStream stream_TOKEN=new RewriteRuleTokenStream(adaptor,"token TOKEN");

		try {
			// CL.g:119:3: ( TOKEN -> ^( CMD_NAME[$TOKEN.text] ) )
			// CL.g:120:3: TOKEN
			{
			TOKEN22=(Token)match(input,TOKEN,FOLLOW_TOKEN_in_cmd_name337);  
			stream_TOKEN.add(TOKEN22);

			// AST REWRITE
			// elements: 
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 120:9: -> ^( CMD_NAME[$TOKEN.text] )
			{
				// CL.g:120:12: ^( CMD_NAME[$TOKEN.text] )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(CMD_NAME, (TOKEN22!=null?TOKEN22.getText():null)), root_1);
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}

		    catch (RecognitionException e) {
		        RuntimeException re = hlp.createException(e);
		        throw re;
		    }

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "cmd_name"


	public static class pos_parm_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "pos_parm"
	// CL.g:123:1: pos_parm : ( TOKEN -> ^( POS_PAR[$TOKEN.text] ) | PAREN -> ^( POS_PAR[$PAREN.text] ) | STRING -> ^( POS_PAR[$STRING.text] ) | fun );
	public final CLParser.pos_parm_return pos_parm() throws RecognitionException {
		CLParser.pos_parm_return retval = new CLParser.pos_parm_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token TOKEN23=null;
		Token PAREN24=null;
		Token STRING25=null;
		ParserRuleReturnScope fun26 =null;

		CommonTree TOKEN23_tree=null;
		CommonTree PAREN24_tree=null;
		CommonTree STRING25_tree=null;
		RewriteRuleTokenStream stream_PAREN=new RewriteRuleTokenStream(adaptor,"token PAREN");
		RewriteRuleTokenStream stream_STRING=new RewriteRuleTokenStream(adaptor,"token STRING");
		RewriteRuleTokenStream stream_TOKEN=new RewriteRuleTokenStream(adaptor,"token TOKEN");

		try {
			// CL.g:124:3: ( TOKEN -> ^( POS_PAR[$TOKEN.text] ) | PAREN -> ^( POS_PAR[$PAREN.text] ) | STRING -> ^( POS_PAR[$STRING.text] ) | fun )
			int alt13=4;
			switch ( input.LA(1) ) {
			case TOKEN:
				{
				alt13=1;
				}
				break;
			case PAREN:
				{
				alt13=2;
				}
				break;
			case STRING:
				{
				alt13=3;
				}
				break;
			case FUN:
				{
				alt13=4;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 13, 0, input);
				throw nvae;
			}
			switch (alt13) {
				case 1 :
					// CL.g:125:3: TOKEN
					{
					TOKEN23=(Token)match(input,TOKEN,FOLLOW_TOKEN_in_pos_parm359);  
					stream_TOKEN.add(TOKEN23);

					// AST REWRITE
					// elements: 
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (CommonTree)adaptor.nil();
					// 125:10: -> ^( POS_PAR[$TOKEN.text] )
					{
						// CL.g:125:13: ^( POS_PAR[$TOKEN.text] )
						{
						CommonTree root_1 = (CommonTree)adaptor.nil();
						root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(POS_PAR, (TOKEN23!=null?TOKEN23.getText():null)), root_1);
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;
